# my-mlb-autoresearch

./: .claudeignore  .clauderules  .gitignore  README.md  analysis.ipynb  check_improvement.py  data_dictionary.md  experiment_log.md  experiment_log_archive.md  feature_engineering.ipynb  feature_engineering.md  prepare.py  program.md  pyproject.toml  research_backlog.md  results.tsv  train.py
scripts/: checkpoint_best.sh  coef_inspect.py  get_baseline.sh  get_features.sh  get_importances.sh  get_params.sh  get_results.sh  revert_train.sh
